--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@nstudio/nativescript-cardview": "^1.0.0",
     "nativescript-theme-core": "~1.0.6",
     "nativescript-vue": "~2.4.0",
-    "tns-core-modules": "~6.1.0"
+    "tns-core-modules": "~6.1.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.1.0",
