--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "repository": "<fill-your-repository-here>",
   "dependencies": {
     "@nstudio/nativescript-cardview": "^1.0.0",
+    "nativescript-pager": "^11.0.10",
     "nativescript-theme-core": "~1.0.6",
     "nativescript-vue": "~2.4.0",
     "tns-core-modules": "~6.1.0",
